packages/devextreme-scss/scss/widgets/generic/tabPanel/_index.scss
@use "sass:color";
@use "variables/colors" as *;
@use "../colors" as *;
@use "variables/sizes" as *;
@use "../sizes" as *;
@use "../tabs/variables/colors" as *;
@use "../tabs/variables/borders" as *;
@use "../tabs/variables/sizes" as *;
@use "../tabs/mixins" as *;
@use "../tabs" as *;
@use "../../base/tabPanel";
@use "variables/borders" as *;
@use "layout/tab/base" as *;
@use "layout/tab/position-top" as *;
@use "layout/tab/position-right" as *;
@use "layout/tab/position-bottom" as *;
@use "layout/tab/position-left" as *;
@use "layout/tab-panel/base" as *;
@use "layout/tab-panel/position-top" as *;
@use "layout/tab-panel/position-right" as *;
@use "layout/tab-panel/position-bottom" as *;
@use "layout/tab-panel/position-left" as *;


// adduse

