Fix stretching one Tab in TabPanel in generic theme

--- a/packages/devextreme-scss/scss/widgets/generic/tabPanel/_index.scss
+++ b/packages/devextreme-scss/scss/widgets/generic/tabPanel/_index.scss
@@ -23,3 +23,9 @@
 
 
 // adduse
+
+.dx-tabpanel {
+  .dx-tabpanel-tab {
+    flex-basis: unset;
+  }
+}
